# netbox-panorama-configpump-plugin

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  EXAMPLES.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: bump_version.yml  enforce_version_bump.yml  publish-to-pypi.yml  tag-new-release.yml  test.yml
develop/: Dockerfile  configuration.py  dev.env  docker-compose.yml  manage.py
develop/db_scripts/: restore_db_snapshot.sh  take_db_snapshot.sh
examples/v11.1.6/: template_example.xml.j2
netbox_panorama_configpump_plugin/: __init__.py  models.py  navigation.py  signals.py  template_content.py  urls.py
netbox_panorama_configpump_plugin/api/: filtersets.py  serializers.py  urls.py  views.py
netbox_panorama_configpump_plugin/connection/: filtersets.py  forms.py  models.py  tables.py  template_code.py  views.py
netbox_panorama_configpump_plugin/connection_template/: filtersets.py  forms.py  models.py  tables.py  views.py
netbox_panorama_configpump_plugin/device_config_sync_status/: filtersets.py  forms.py  jobs.py  models.py  panorama.py  tables.py  template_code.py  views.py
netbox_panorama_configpump_plugin/migrations/: 0001_initial.py  0002_deviceconfigsyncstatus_deduce_xpaths_and_more.py  (+2 more)
tests/: __init__.py  test_calculate_diff.py  test_connection.py  test_connection_template.py  test_device_config_sync_status.py  test_panorama_client.py  test_push.py
tests/test_data/: panorama_config1.xml  (+4 more)
(+12 files in other folders)
